tests/expectations/compiler/function/function_returns_record_fail.out
Error [ETYC0372057]: Only entry point fns can have a record as input or output.
    --> compiler-test:2:8
     |
   2 | fn foo(board: Board, data: u8) -> Board {
     |        ^^^^^^^^^^^^
Error [ETYC0372057]: Only entry point fns can have a record as input or output.
    --> compiler-test:2:35
     |
   2 | fn foo(board: Board, data: u8) -> Board {
     |                                   ^^^^^
Error [ETYC0372057]: Only entry point fns can have a record as input or output.
    --> compiler-test:9:8
     |
   9 | fn bar(board: Board) {
     |        ^^^^^^^^^^^^
